Fix error with menu on mobile.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,8 +45,6 @@ header a {
     color: inherit;
 }
 
-
-
 #menu {
     font-size: 110%;
     letter-spacing: 4px;
@@ -73,7 +71,7 @@ nav {
     top: 100%;
 }
 
-/* Nav checkbox toggle */
+/* Nav toggle */
 #nav-toggle:checked~nav {
     display: block;
 }
@@ -91,23 +89,23 @@ main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
-
 }
 
-/*hero-section*/
+/* Hero section */
 #hero {
     height: 600px;
-    max-width: 100%;
+    width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
     position: relative;
 }
 
 #cover-text {
+    /* Final rgba value sets the opacity so it is semi-transparent */
     background-color: rgba(241, 109, 107, .7);
-    width: 80%;
     font-size: 130%;
     position: absolute;
     bottom: 30px;
+    width: 80%;
     min-height: 200px;
     padding-top: 40px;
     padding-left: 10px;
@@ -118,51 +116,57 @@ main {
     color: #ffffff;
 }
 
-/*Reasons Section*/
-#reasons{
+/* Reasons section */
+#reasons {
     width: 90%;
-    margin:20px auto;
+    margin: 20px auto;
 }
-#reasons h2{
-    font-size: 280%;
+
+#reasons h2 {
     margin-bottom: 20px;
     text-align: center;
+    font-size: 280%;
 }
+
 #benefits-physical>div,
- #benefits-mental >div{
+#benefits-mental>div {
     line-height: 20px;
-    margin-bottom:20px;
+    margin-bottom: 20px;
 }
-#benefits p{
+
+#benefits p {
     padding: 0 20px;
-} 
-#benefits hr{
+}
+
+#benefits hr {
     border-top: 1px solid #3a3a3a;
     margin: 5px 0;
 }
-#circle-cover-bg{
-    background: url("../images/reasons-image.webp") no-repeat top center/cover;
-    width: 90vw;
+
+#circle-cover-bg {
+    background: url('../images/reasons-image.webp') no-repeat top center / cover;
     height: 90vw;
+    width: 90vw;
     margin-bottom: 20px;
+    /* Makes the square image into a circle */
     border-radius: 50%;
     max-width: 300px;
     max-height: 300px;
-
 }
-#benefits-image{
+
+#benefits-image {
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 /* Footer */
 #social-networks {
     text-align: center;
-    padding: 20px;
+    padding: 20px 0;
     display: flex;
     justify-content: space-evenly;
     list-style-type: none;
-
 }
 
 #social-networks i {
@@ -171,8 +175,10 @@ main {
     color: #3a3a3a;
 }
 
-/*Media Query: Tablets >= 768px*/
+/* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
+
+    /* Header */
     nav {
         display: block;
         position: relative;
@@ -180,7 +186,7 @@ main {
         width: fit-content;
         padding-right: 1rem;
     }
-}
+
     #menu {
         display: flex;
     }
@@ -194,75 +200,74 @@ main {
     }
 
     #logo {
-        font-size: 200%;
+        font-size: 280%;
         line-height: 75px;
         margin: 0 0.5rem;
     }
 
+    /* Main content */
     main {
+        /* Push main content down to accommodate larger header */
         margin-top: 79px;
     }
 
-    /*Hero*/
+    /* Hero */
     #cover-text {
         width: 300px;
         right: 50px;
     }
-#circle-cover-bg{
-    max-width: 300px;
-    max-height: 300px;
+
+    /* Reasons section */
+    #benefits-physical,
+    #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    #benefits-physical>div,
+    #benefits-mental>div {
+        width: 75%;
+    }
+
+    #benefits-mental>div {
+        text-align: end;
+        align-self: flex-end;
+    }
+
 }
-/*Reasons section*/
-#benefits-physical, #benefits-mental{
 
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-
-}
-#benefits-physical > div,
- #benefits-mental > div{
-    width: 75%; 
-}
-#benefits-mental > div{
-    text-align:end;
-    align-self: flex-end;
-}
-  
- 
-
-
-/*screen sizes of laptops and desktops >992px*/
-
-@media screen and (min-width:992px) {
+/* Large devices (laptops and desktops, 992px and up) */
+@media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
     }
-
 }
-/*screen sizes of laptops and desktops >1200px*/
 
-@media screen and (min-width:1000px) {
-    #benefits{
+@media screen and (min-width: 1200px) {    
+    /* Reasons section */
+    #benefits {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
-    }    
-    #benefits-image{
-        order:0;
-        margin-left: 10px;
-        margin-right: 10px;
     }
+
+    #benefits > div {
+        flex: 1;
+    }
+
+    #benefits-image {
+        order: 0
+    }
+
     #benefits-mental {
-    order: 1;
-  }
-  #benefits-physical > div{
-align-self: flex-end;
-text-align: right;
-  }
-  
-  #benefits-mental >div {
-    align-self: flex-start;
-    text-align: left;
-  }
+        order: 1;
+    }
+
+    #benefits-mental > div {
+        align-self: flex-start;
+    }
+
+    #benefits-physical > div {
+        align-self: flex-end;
+    }
 }
